$Rev$
[2008/01/11]
mako_plugin/dirbrowserext.py makotmp.acp
                    Fix mako tag auto complete bug #issue 14
unicodetext.py      Fix utf-16 convertion bug
mIndentMove.py      When moving next indent position, select the text #issue 15

[2008/01/10]
EditorFactory.py    Add FNB.FNB_DROPDOWN_TABS_LIST style to EditorCtrl
Entry.py            Using new SetFocus method of meide
dynamicmenu.py      Fix editor shortcuts key caption error

[2008/01/09]
ShellWindow.py      Fix popup menu creation too late, so the UpdateUI will raise exception
Editor.py           Also change popup menu creation position
HtmlPage.py         Fix GTK platform display
AsyncAction.py mInputassistant.py
                    Improve AsyncAction.py using block mode and timeout parameter, so
                    it'll natural implement the timeout delay process after press a key.
                    And this will simplify the code. Also comment the on_key_down function, 
                    which invoke the win.mainframe.auto_routin_ac_action.put, because
                    on_key_down is triggered by pressing control keystroke, so I think
                    it's unnecessary. Also add ygao's if you type in the same line
                    from last modified, and don't do analysis work. But I also judged if
                    it's a multiline operation, if True, then it'll still trigger the
                    analysis process.

[2008/01/07]
OutlineBrowser.py   Fix unicode convert bug

[2008/01/05]
PCInfo.py MainFrame.py MyStatusBar.py
                    Add linux platform memory display on the statusbar
                    
[2008/01/04]
mFormat.py mIndentMove.py
                    Add indent cursor move functionality
mClassBrowser.py OutlineBrowser.py
                    Improve python class browser
CodeSnippet.py      Fix InsertItemBefore bug

[2008/01/02]
mWindow.py mHotKey.py
                    Fix custom hotkey error
SvnSettings.py      Fix svn bug